--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       text-align: center;
     }
     header img {
-      height: 60px;
+      height: 100px;
       display: block;
       margin: 0 auto 10px auto;
     }
@@ -69,6 +69,16 @@
       font-size: 0.9em;
       color: #777;
     }
+    .legal {
+      margin-top: 2rem;
+      font-size: 0.8em;
+      color: #555;
+      text-align: left;
+      max-width: 900px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 1rem;
+    }
     @media (max-width: 600px) {
       .link-card {
         flex: 1 1 100%;
@@ -78,7 +88,7 @@
 </head>
 <body>
   <header>
-    <img src="logo2.png" alt="Logo AAMB">
+    <img src="logo2.jpg" alt="Logo AAMB">
     <h1>Association des Amis du Musée de la Batellerie</h1>
   </header>
   <div class="container">
@@ -97,16 +107,30 @@
     <section class="images">
       <div>
         <h3>Le Triton 25</h3>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/33/Triton25.jpg/800px-Triton25.jpg" alt="Photo du Triton 25">
-        <p><small>Source : Wikipédia - <a href="https://fr.wikipedia.org/wiki/Triton_25" target="_blank">Triton 25</a></small></p>
+        <img src="Triton_25_Conflans.jpg" alt="Photo du Triton 25">
+        <p><small>Crédit : Association AAMB – Conflans-Sainte-Honorine</small></p>
       </div>
       <div>
         <h3>Le remorqueur Jacques</h3>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Jacques-Remorqueur.jpg/800px-Jacques-Remorqueur.jpg" alt="Photo du remorqueur Jacques">
-        <p><small>Source : Wikipédia - <a href="https://fr.wikipedia.org/wiki/Jacques_(remorqueur)" target="_blank">Jacques (remorqueur)</a></small></p>
+        <img src="Jacques_Conflans.jpg" alt="Photo du remorqueur Jacques">
+        <p><small>Crédit : Association AAMB – Conflans-Sainte-Honorine</small></p>
       </div>
     </section>
   </div>
+
+  <section class="legal">
+    <h4>Mentions légales</h4>
+    <p><strong>Éditeur :</strong> Association des Amis du Musée de la Batellerie<br>
+    Siège social : 3 Place Jules Gévelot, 78700 Conflans-Sainte-Honorine<br>
+    SIREN : 394 292 262 – RNA : W783000593<br>
+    Association déclarée à la préfecture des Yvelines<br>
+    Contact : aambconflans@gmail.com (à adapter si besoin)</p>
+    <p><strong>Hébergement :</strong> GitHub Pages<br>
+    GitHub Inc., 88 Colin P Kelly Jr St, San Francisco, CA 94107, USA</p>
+    <p><strong>Responsable de publication :</strong> Président de l'association</p>
+    <p>Les photographies sont la propriété de l'association ou utilisées avec autorisation.</p>
+  </section>
+
   <footer>
     <p>&copy; Association des Amis du Musée de la Batellerie – Conflans-Sainte-Honorine</p>
   </footer>
