--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     Siège social : 3 Place Jules Gévelot, 78700 Conflans-Sainte-Honorine<br>
     SIREN : 394 292 262 – RNA : W783000593<br>
     Association déclarée à la préfecture des Yvelines<br>
-    Contact : aambconflans@gmail.com (à adapter si besoin)</p>
+    Contact : contacts@aambconflans.org</p>
     <p><strong>Hébergement :</strong> GitHub Pages<br>
     GitHub Inc., 88 Colin P Kelly Jr St, San Francisco, CA 94107, USA</p>
     <p><strong>Responsable de publication :</strong> Président de l'association</p>
