--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
   </header>
   <div class="container">
     <section class="intro">
-      <p>L'association des Amis du Musée de la Batellerie œuvre pour la préservation et la valorisation du patrimoine fluvial. Elle soutient le musée de Conflans-Sainte-Honorine, participe à la médiation autour de la batellerie, et mène des projets concrets de restauration.</p>
-      <p>Actuellement, l'association s'engage pour la restauration de deux bateaux emblématiques : le remorqueur <strong>Jacques</strong> et le bateau de plaisance <strong>Triton 25</strong>, afin de préserver leur mémoire et les transmettre aux générations futures.</p>
+      <p>L'association des Amis du Musée de la Batellerie œuvre pour la préservation et la valorisation du patrimoine fluvial. Elle soutient le musée de la Batellerie de Conflans-Sainte-Honorine, participe à la médiation autour de la batellerie, et mène des projets concrets de restauration.</p>
+      <p>Actuellement, l'association s'engage pour la restauration de deux bateaux emblématiques inscrits en tant que monuments historique du patrimoine fluvial  : le remorqueur à vapeur <strong>Le Jacques</strong> et le remorqueur/pousseur <strong>Le Triton 25</strong>, afin de préserver leur mémoire et les transmettre aux générations futures.</p>
     </section>
 
     <section class="links">
