--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="container">
     <section class="intro">
       <p>L'association des Amis du Musée de la Batellerie œuvre pour la préservation et la valorisation du patrimoine fluvial. Elle soutient le musée de la Batellerie de Conflans-Sainte-Honorine, participe à la médiation autour de la batellerie, et mène des projets concrets de restauration.</p>
-      <p>Actuellement, l'association s'engage pour la restauration de deux bateaux emblématiques inscrits en tant que monuments historique du patrimoine fluvial  : le remorqueur à vapeur <strong>Le Jacques</strong> et le remorqueur/pousseur <strong>Le Triton 25</strong>, afin de préserver leur mémoire et les transmettre aux générations futures.</p>
+      <p>Actuellement, l'association est engagée dans la restauration de deux bateaux emblématiques, inscrits au titre des monuments historiques du patrimoine fluvial : le remorqueur à vapeur <strong>Le Jacques</strong> et le remorqueur/pousseur <strong>Le Triton 25</strong>, afin de préserver leur mémoire et les transmettre aux générations futures.</p>
     </section>
 
     <section class="links">
