--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <section class="images">
       <div>
         <h3>Le Triton 25</h3>
-        <img src="Triton_25_Conflans.jpg" alt="Photo du Triton 25">
+        <img src="Triton_25_Conflans_JO.jpg" alt="Photo du Triton 25 aux JO">
         <p><small>Crédit : Association AAMB – Conflans-Sainte-Honorine</small></p>
       </div>
       <div>
