--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 
     <section class="images">
       <div>
-        <h3>Le Triton 25 aux JO</h3>
+        <h3>Le "Triton 25" aux JO</h3>
         <img src="Triton_25_Conflans_JO.jpg" alt="Photo du Triton 25 aux JO">
         <p><small>Crédit : Association AAMB – Conflans-Sainte-Honorine</small></p>
       </div>
       <div>
-        <h3>Le remorqueur Jacques</h3>
+        <h3>Le remorqueur à vapeur "Le Jacques"</h3>
         <img src="Jacques_Conflans.jpg" alt="Photo du remorqueur Jacques">
         <p><small>Crédit : Association AAMB – Conflans-Sainte-Honorine</small></p>
       </div>
