--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <header>
-    <img src="logo2jpg.jpg" alt="Logo AAMB Ancriau">
+    <img src="Logo2jpg.jpg" alt="Logo AAMB Ancriau">
     <h1>Association des Amis du Musée de la Batellerie</h1>
   </header>
   <div class="container">
