--- a/index.html
+++ b/index.html
@@ -98,10 +98,7 @@
     </section>
 
     <section class="links">
-      <a class="link-card" href="http://museebatellerie.blogspot.com" target="_blank">Blog du musée</a>
-      <a class="link-card" href="http://associationaamb.blogspot.com" target="_blank">Blog de l'association</a>
-      <a class="link-card" href="https://www.musee-batellerie-conflans.fr" target="_blank">Site du musée</a>
-      <a class="link-card" href="https://www.helloasso.com/associations/association-des-amis-du-musee-de-la-batellerie" target="_blank">Adhérer à l'association</a>
+      <a class="link-card" href="https://aambconflans.s2.yapla.com/fr/" target="_blank">Site de l'association</a>
     </section>
 
     <section class="images">
